[package]
name = "hohoho"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Aequitosh/hohoho"
description = "Intepreter for Santa's Programming Language - HoHoHo!"

[dependencies]
anyhow = { version = "1.0.75" }
brainfuck = "0.2.1"
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0"

[[bin]]
name = "hohoho"
doc = false

